k8s/redirect-https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: default-redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
