k8s/deployment.yaml

apiVersion: v1
kind: Service
metadata:
  name: service-ressources
spec:
  selector:
    app: service-ressources
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-ressources-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-ressources
  template:
    metadata:
      labels:
        app: service-ressources
    spec:
      containers:
      - name: service-ressources
        image: registry.gitlab.com/devops2255146/flexidesk-project/service-ressources:TAG_PLACEHOLDER
        ports:
        - containerPort: 8081
        imagePullSecrets:
      - name: gitlab-registry-creds
---
apiVersion: v1
kind: Service
metadata:
  name: service-utilisateurs
spec:
  selector:
    app: service-utilisateurs
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-utilisateurs-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-utilisateurs
  template:
    metadata:
      labels:
        app: service-utilisateurs
    spec:
      containers:
      - name: service-utilisateurs
        image: registry.gitlab.com/devops2255146/flexidesk-project/service-utilisateurs:TAG_PLACEHOLDER
        ports:
        - containerPort: 8082
        imagePullSecrets:
      - name: gitlab-registry-creds
---
apiVersion: v1
kind: Service
metadata:
  name: service-reservations
spec:
  selector:
    app: service-reservations
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-reservations-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-reservations
  template:
    metadata:
      labels:
        app: service-reservations
    spec:
      containers:
      - name: service-reservations
        image: registry.gitlab.com/devops2255146/flexidesk-project/service-reservations:TAG_PLACEHOLDER
        ports:
        - containerPort: 8083
        imagePullSecrets:
      - name: gitlab-registry-creds
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: registry.gitlab.com/devops2255146/flexidesk-project/api-gateway:TAG_PLACEHOLDER
        ports:
        - containerPort: 8080
        imagePullSecrets:
      - name: gitlab-registry-creds
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-react
spec:
  selector:
    app: frontend-react
  ports:
    - protocol: TCP
      port: 80 # Le service K8s expose le port 80
      targetPort: 80 # Le conteneur Nginx écoute sur le port 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-react-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-react
  template:
    metadata:
      labels:
        app: frontend-react
    spec:
      containers:
      - name: frontend-react
        image: registry.gitlab.com/devops2255146/flexidesk-project/frontend-react:TAG_PLACEHOLDER
        ports:
        - containerPort: 80
        imagePullSecrets:
      - name: gitlab-registry-creds
