k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flexidesk-ingress
  # On peut ajouter des annotations pour forcer Traefik (l'ingress de K3s)
  # à gérer le www, mais gardons simple pour l'instant.
spec:
  rules:
  # Règle pour le domaine racine ailyes.com
  - host: ailyes.com
    http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-react
            port:
              number: 80
              
  # Règle pour www.ailyes.com (si vous avez fait l'étape DNS)
  - host: www.ailyes.com
    http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-react
            port:
              number: 80
